RESOLVED FIXED139188
ASSERTION: RenderMultiColumnFlowThread::processPossibleSpannerDescendant() when column spanner's parent is not a RenderBlockFlow.
https://bugs.webkit.org/show_bug.cgi?id=139188
Summary ASSERTION: RenderMultiColumnFlowThread::processPossibleSpannerDescendant() wh...
alan
Reported 2014-12-02 11:03:02 PST
RenderMultiColumnFlowThread::processPossibleSpannerDescendant() expects the parent to be RenderBlockFlow.
Attachments
Patch (4.28 KB, patch)
2014-12-02 12:49 PST, alan
no flags
alan
Comment 1 2014-12-02 11:03:45 PST
alan
Comment 2 2014-12-02 12:49:25 PST
Dave Hyatt
Comment 3 2014-12-03 11:57:24 PST
Comment on attachment 242441 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-12-03 12:53:22 PST
Comment on attachment 242441 [details] Patch Clearing flags on attachment: 242441 Committed r176750: <http://trac.webkit.org/changeset/176750>
WebKit Commit Bot
Comment 5 2014-12-03 12:53:27 PST
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 6 2016-07-13 13:45:56 PDT
*** Bug 137258 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.